# SoundMask

./: .env.example  .gitignore  CHANGELOG.md  Handoff.md  README.md  pyproject.toml
app/: __main__.py  audio.py  auth.py  bundled_sounds.py  calendar_client.py  cli.py  config.py  dashboard_health.py  db.py  display.py  log_viewer.py  logging_setup.py  main.py  models.py  network_config.py  schedule_views.py  scheduler.py  sound_categories.py  sound_mixer.py  timezones.py  trigger_rules.py  update_manager.py
app/routes/: __init__.py  calendar.py  calendar_view.py  dashboard.py  logs.py  settings.py  sounds.py  updates.py
app/static/: app.js  style.css
app/templates/: base.html  calendar.html  calendar_view.html  dashboard.html  login.html  logs.html  network_change_requested.html  settings.html  sounds.html  (+1 more)
scripts/: install-linux.sh  run-dev.sh
sounds/: README.md
systemd/: soundmask-network-apply.path  soundmask-network-apply.service  soundmask-update-check.path  soundmask-update-check.service  soundmask-update-check.timer  soundmask-update-install.path  soundmask-update-install.service  soundmask.env.example  soundmask.service
tests/: test_audio_decisions.py  test_audio_manager.py  test_auth.py  test_busy_merge.py  test_calendar_client.py  test_cli.py  test_config.py  test_dashboard_health.py  test_dashboard_view.py  test_display.py  test_ics_calendar.py  test_log_viewer.py  test_network_config.py  test_schedule_views.py  test_scheduler.py  test_sound_library.py  test_sound_mixer.py  test_trigger_rules.py  test_update_manager.py  test_updates_view.py
